fix column alignment of todolistitem.js

--- a/src/components/AddTodoForm.module.css
+++ b/src/components/AddTodoForm.module.css
@@ -2,6 +2,13 @@ svg.addButton {
   fill: pink;
   transition: fill 0.2s ease-in-out;
 }
+.inputContainer {
+}
+
+.add-button-container {
+
+}
+
 
 .addButton {
   background: none;
